<resources>
    <string name="app_name">Farizdotid Labs</string>
    <string name="title_daftar_makanan_sunda">Daftar Makanan Sunda</string>
    <string name="title_radio_button_example">Radio Button</string>
    <string name="title_date_picker_example">Date Picker</string>
    <string name="title_email_validation_example">Email Validation</string>
    <string name="title_image_circle_example">Image Circle</string>
    <string name="title_date_range_picker_example">Date Range Picker</string>
    <string name="title_adapter_click_listener">Adapter Click With Listener</string>
    <string name="title_tab_google_play">TabLayout Google Play</string>
    <string name="glide_loading_sample">Glide Loading</string>
    <string name="title_custom_font">Custom Font</string>
    <string name="title_radius_glide">Corner Radius Glide</string>
    <string name="title_masukan_nomor_hp">Masukan Nomor HP</string>
    <string name="title_buka_whatsapp">Buka Whatsapp</string>
    <string name="error_message_form_empty">Form tidak boleh kosong</string>
    <string name="title_open_whatsapp">Open Whatsapp</string>
</resources>
